<resources>
    <string name="app_name">CountriesApp</string>
    <string name="str_detail_countrie_cd">Detalle de ciudad</string>
    <string name="str_search_btn">Buscar</string>
    <string name="str_name_countrie_hint">Nombre de ciudad</string>
    <string name="str_name_country_label">Nombre del país</string>
    <string name="str_amount_states_label">Número de estados</string>
    <string name="str_capital_label">Capital</string>
    <string name="str_add_country_cd">Agregar pa[is</string>
    <string name="str_add_new_state_cd">Agregar nuevo estado</string>
    <string name="str_name_state">Nombre del estado</string>
    <string name="str_edit_país_cd">Editar país\n</string>
    <string name="str_edit_label">Editar</string>
    <string name="str_nombre_del_pais_label">Nombre del país</string>
</resources>